- New NXSL function ArrayToString
- New OS parameters and tables: System.HandleCount, System.OpenFiles, Process.Handles
- Unified macros in all types of object tools
- Server can be switched to case-insensitive login names mode
- Implemented support of "command generates output" option for server commands
- Network device driver for TelcoBridges gateways
- Fixed memory leak in Qtech OLT driver
- Management console:
	- Default object display mode can be set in map properties
	- Map drill-down can be enabled in dashboard map elements
	- Input fields in object tools
	- Improved script editor for script library
	- Interface speed displayed in interface object details and in "Interfaces" tab
	- Symbolic name of interface type diplayed when known
- Fixed issues: #38, #55, #741, #818, #829, #830, #836, #838, #840, #843, #844, #845, #846, #848, #850, #853, #855, #856, #857, #862, #866


*
* 2.0-M5
*

- Agent-side caching of collected data
- Fixed bug in handling floating point Windows performance counters
- Added "comments" attribute to NXSL "DCI" class
- New NXSL function sha256
- Fixed broken nxagent.sms SMS driver
- Added support for SNMP traps over IPv6
- Switched to SHA-256 for password hashing
- Timestamp can be provided in nxpush and nxapush
- New methods in NXSL class "Event": setMessage, setSeverity, setUserTag
- Command line options for nxagentd to change effective user and group after start
- Fixed occasional NXSL compiler crash on scripts with syntax errors
- Errors in auto bind/apply scripts interpreted as "ignore" instead of "false" result
- New core agent parameter File.FolderCount
- Fixed broken active discovery
- Improved system behaviour on large installations
- Management console:
	- Fixed broken VPN connectors configuration
	- "Inverted values" option on line charts
	- Filter in predefined graphs tree
	- Values of selected DCIs can be shown on object overview page
	- "Stacked" option added to line charts on dashboards