@@ -14,5 +14,5 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 
-SUBDIRS = dbquery filemgr winnt winperf wmi portCheck ping sms ups ecs logwatch devemu ${SUBAGENT_DIRS} 
+SUBDIRS = dbquery filemgr winnt winperf wmi portCheck ping sms ups ecs logwatch devemu ubntlw ${SUBAGENT_DIRS} 
 EXTRA_DIST = subagent.sym
