@@ -15,6 +15,7 @@
 - Implemented support of "command generates output" option for server commands
 - Network device driver for TelcoBridges gateways
 - Fixed memory leak in Qtech OLT driver
+- Java subagent plugin for Ubiquity/LigoWave device monitoring
 - Management console:
 	- Default object display mode can be set in map properties
 	- Map drill-down can be enabled in dashboard map elements
